# split_y5

./: .gitignore  README.md  pyproject.toml
docs/: Yr5PHEXAM.doc  protocol for 5yr physical assessment.doc
src/: main.py
src/config/: __init__.py  paths.py  variables.py
