[project]
name = "split-y5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "odyssey",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "marimo>=0.14.10"
]

[tool.uv.sources]
odyssey = { path = "../odyssey", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
